Add start of Ivy support. Include jars I think we'll need

--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 
 <!--
-  ~ Copyright (c) 2009 Share This, Inc. All rights reserved
+  ~ Copyright (c) 2009 The Bixo Project. All rights reserved
   -->
 
 <project name="searchcrawl" default="build" basedir=".">
