--- a/build.xml
+++ b/build.xml
@@ -1,170 +1,191 @@
-<?xml version="1.0"?>
+<project name="bixo-core" default="test" xmlns:ivy="antlib:org.apache.ivy.ant">
 
-<!--
-  ~ Copyright (c) 2009 The Bixo Project. All rights reserved
-  -->
+	<property name="root.dir" value="${basedir}" />
+	<!-- all standard ant tasks are in the common build file-->
+	<import file="${root.dir}/src/build/ant/common-build.xml" />
 
-<project name="searchcrawl" default="build" basedir=".">
+	
 
-  <!-- load properties first -->
-  <!--<property file="${user.home}/${name}.build.properties" />-->
-  <property file="${basedir}/build.properties"/>
+	<!-- ================================================================== -->
+	<!-- Integration Tests                                                  -->
+	<!-- ================================================================== -->
 
-  <property name="src.dir" location="${basedir}/src/main/java"/>
-  <property name="src.test" location="${basedir}/src/test/java"/>
+	<target name="compile-integration-test" depends="compile, compile-test" >
+		<echo>*** Building Integration Tests Sources ***</echo>
+		<mkdir dir="${build.dir.it-classes}" />
+		<ivy:cachepath pathid="test.path.id" conf="test" />
+		<path id="test.path">
+			<path refid="test.path.id" />
+			<pathelement location="${build.dir.main-classes}" />
+			<pathelement location="${build.dir.test-classes}" />
+		</path>
 
-  <available file="${src.dir}" type="dir" property="main.available"/>
-  <available file="${src.test}" type="dir" property="test.available"/>
+		<javac encoding="${build.encoding}" srcdir="${it.src.dir}" includes="**/*.java" destdir="${build.dir.it-classes}" debug="${javac.debug}" optimize="${javac.optimize}" target="${javac.version}" source="${javac.version}" deprecation="${javac.deprecation}">
+			<compilerarg line="${javac.args} ${javac.args.warnings}" />
+			<classpath refid="test.path" />
+		</javac>
+	</target>
 
-  <property name="conf.dir" location="${basedir}/conf"/>
+	<target name="it" depends="jar, compile-integration-test" description="--> run integration tests">
+		<delete dir="${build.dir.it-reports}" />
+		<mkdir dir="${build.dir.it-reports}" />
 
-  <property name="lib.dir" location="${basedir}/lib"/>
+		<delete dir="${build.dir.test-data}" />
+		<mkdir dir="${build.dir.test-data}" />
 
-  <property name="build.dir" location="${basedir}/build/"/>
-  <property name="build.classes" location="${build.dir}/classes"/>
-  <property name="build.test" location="${build.dir}/test"/>
+		<ivy:cachepath pathid="test.path.id" conf="test" />
 
-  <property name="dist" location="dist"/>
+		<junit showoutput="no" printsummary="yes" haltonfailure="no" fork="yes" maxmemory="256m" dir="${basedir}" errorProperty="tests.failed" failureProperty="tests.failed">
+			<classpath>
+				<pathelement location="${build.dir.main-classes}" />
+				<pathelement location="${build.dir.it-classes}" />
+				<pathelement location="${build.dir.test-classes}" />
+				<pathelement location="${test.res.dir}" />
+				<path refid="test.path.id" />
+				<fileset file="${build.dir}/${ant.project.name}.jar" />
+			</classpath>
+			<formatter type="plain" />
 
-  <property name="test.results" location="${build.dir}/testresults"/>
-  <property name="test.showoutput" value="no"/>
+			<batchtest fork="yes" todir="${build.dir.it-reports}">
+				<fileset dir="${it.src.dir}">
+					<include name="**/*Test*.java" unless="testcase" />
+				</fileset>
+			</batchtest>
+		</junit>
+		<fail if="tests.failed">Tests failed!</fail>
+	</target>
 
-  <property name="log.data" location="${basedir}/src/test/data/sample.log.gz"/>
+	<!-- ================================================================== -->
+	<!-- Generate a distribution                                            -->
+	<!-- ================================================================== -->
+
+	<target name="dist" depends="test, it, coverage, jar, doc" description="--> creates a distribution">
+
+		<delete dir="${build.dir.dist}" />
+		<!-- creating a fileset for pulling all libs from ivycache cuz disk space is cheap -->
+		<ivy:cachefileset conf="compile" setid="libs" />
+
+		<!-- create target directory -->
+		<mkdir dir="${build.dir.dist}" />
+		<mkdir dir="${build.dir.dist}/bin" />
+		<mkdir dir="${build.dir.dist}/conf" />
+		<mkdir dir="${build.dir.dist}/docs" />
+		<mkdir dir="${build.dir.dist}/docs/javadoc" />
+		<mkdir dir="${build.dir.dist}/docs/reports" />
+		<mkdir dir="${build.dir.dist}/lib" />
+		<mkdir dir="${build.dir.dist}/src" />
+
+		<!-- copy launch script to target -->
+		<copy todir="${build.dir.dist}/bin">
+			<fileset dir="${basedir}/bin" />
+		</copy>
+		<!-- copy  conf to target dir  -->
+		<copy todir="${build.dir.dist}/conf">
+			<fileset dir="${basedir}/conf" />
+		</copy>
+		<!-- copy  javadoc to target dir  -->
+		<copy todir="${build.dir.dist}/docs/javadoc">
+			<fileset dir="${build.javadoc}" />
+		</copy>
+		<!-- copy reports to target dir  -->
+		<copy todir="${build.dir.dist}/docs/reports" failonerror="no">
+			<fileset dir="${coverage.html.dir}" />
+		</copy>
+		<!-- copy ivy cache to lib -->
+		<copy todir="${build.dir.dist}/lib" flatten="true">
+			<fileset refid="libs" />
+		</copy>
+		<!-- copy src -->
+		<copy todir="${build.dir.dist}/src">
+			<fileset dir="${basedir}/src" />
+		</copy>
+		<!-- copy project jar to dist dir -->
+		<copy todir="${build.dir.dist}">
+			<fileset file="${build.dir}/${jar.name}" />
+		</copy>
+
+		<!-- copy project jar to dist dir -->
+		<copy todir="${build.dir.dist}">
+			<fileset file="${basedir}/CHANGES.txt" />
+			<fileset file="${basedir}/LICENSE.txt" />
+			<fileset file="${basedir}/README.txt" />
+		</copy>
+
+		<tar longfile="gnu" compression="gzip" destfile="${build.release.file}">
+			<tarfileset dir="${build.dir.dist}" />
+		</tar>
+	</target>
+
+	<!-- ================================================================== -->
+	<!-- Generating eclipse file                                            -->
+	<!-- ================================================================== -->
+
+	<target name="eclipse" depends="resolve">
+
+		<ivy:cachepath pathid="eclipse.path.id" conf="eclipse" />
+		<ivy:cachepath pathid="test.path.id" conf="test" />
+		<taskdef name="eclipse" classname="prantl.ant.eclipse.EclipseTask" classpathref="eclipse.path.id" />
+		<mkdir dir="${build.dir.main-classes}" />
+		<mkdir dir="${build.dir.test-classes}" />
+		<eclipse>
+			<settings>
+				<jdtcore compilercompliance="6.0" />
+				<resources encoding="UTF-8" />
+			</settings>
+			<project name="${ant.project.name}" />
+			<classpath>
+				<container path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6" />
+
+			    <source path="${basedir}/src/main/java" output="${build.dir.main-classes}" />
+				<source path="${basedir}/src/test/java" output="${build.dir.test-classes}" />
+				<source path="${basedir}/src/test/resources" output="${build.dir.test-classes}" />
+				<source path="${basedir}/src/test/integration" output="${build.dir.test-classes}" />
 
 
-  <path id="project.class.path">
-    <pathelement location="${build.classes}"/>
-    <pathelement location="${build.test}"/>
+				<!-- extras -->
+				<!-- we do not yet have extra modules, but it is just a question of time :) -->
+                
+				<output path="${build.dir.main-classes}" />
+				<library pathref="test.path.id" exported="false" />
+			</classpath>
+		</eclipse>
+		<concat destfile="${basedir.ivy.instance}/.settings/org.eclipse.jdt.core.prefs" append="true">
+			 <filelist dir="${root.dir}/src/build/eclipse" files="formatter"/>
+		</concat>
+		<replace file="${basedir.ivy.instance}/.settings/org.eclipse.jdt.core.prefs" token="org.eclipse.jdt.core.compiler.compliance=6.0" value="org.eclipse.jdt.core.compiler.compliance=1.6" />
+	</target>
 
-    <fileset dir="${lib.dir}">
-      <include name="*.jar"/>
-    </fileset>
-  </path>
+	<target name="clean-eclipse" depends="resolve" description="--> cleans the eclipse project files">
+		<delete file=".classpath" />
+		<delete file=".eclipse" />
+		<delete file=".project" />
+		<delete dir=".settings" />
+	</target>
 
-  <target name="clean">
 
-    <echo message="cleaning..."/>
-    <delete dir="${build.dir}"/>
-    <delete dir="${dist}"/>
-    <delete dir="${ant.project.name}.tgz"/>
+	<!-- ================================================================== -->
+	<!-- Multi project build                                                -->
+	<!-- ================================================================== -->
 
-    <!-- delete emacs cruft -->
-    <defaultexcludes remove="**/*~"/>
-    <delete>
-     <fileset dir=".">
-      <include name="**/*~"/>
-     </fileset>
-    </delete>
+	<macrodef name="iterate">
+		<attribute name="target" />
+		<sequential>
+			<subant target="@{target}">
+				<property name="root.dir" value="${basedir}" />
+				<!-- extras should go into a sub folder extras 
+                <fileset dir="extras" includes="*/build.xml" />
+                -->
+			</subant>
+		</sequential>
+	</macrodef>
 
-  </target>
+	<target name="clean-all">
+		<antcall target="clean" />
+		<iterate target="clean" />
+	</target>
 
-  <target name="compile">
-
-    <echo message="building..."/>
-    <mkdir dir="${build.classes}"/>
-    <mkdir dir="${lib.dir}"/>
-
-    <javac srcdir="${src.dir}" destdir="${build.classes}" verbose="off">
-      <classpath refid="project.class.path"/>
-    </javac>
-
-    <copy todir="${build.classes}">
-      <fileset dir="${src.dir}">
-        <exclude name="**/*.java"/>
-      </fileset>
-    </copy>
-
-  </target>
-
-  <target name="compile-test">
-
-    <echo message="building..."/>
-    <mkdir dir="${build.test}"/>
-    <mkdir dir="${lib.dir}"/>
-
-    <javac srcdir="${src.test}" destdir="${build.test}" verbose="off">
-      <classpath refid="project.class.path"/>
-    </javac>
-
-    <copy todir="${build.test}">
-      <fileset dir="${src.test}">
-        <exclude name="**/*.java"/>
-      </fileset>
-    </copy>
-
-  </target>
-
-  <!-- runs JUnit tests -->
-  <target name="test" depends="compile,compile-test" description="run the unit tests">
-    <echo message="running all tests..."/>
-
-    <mkdir dir="build/test/log"/>
-    <mkdir dir="${test.results}"/>
-
-    <junit printsummary="true" showoutput="${test.showoutput}" fork="yes" haltonerror="no" haltonfailure="no" dir="."
-           maxmemory="756m">
-
-      <sysproperty key="test.cluster.enabled" value="${test.cluster.enabled}"/>
-      <sysproperty key="test.build.data" value="${log.data}"/>
-      <sysproperty key="hadoop.log.dir" value="build/test/log"/>
-
-      <!--<jvmarg value="-Xdebug"/>--><!--<jvmarg value="-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005"/>-->
-
-      <classpath>
-        <path refid="project.class.path"/>
-        <pathelement path="${java.class.path}"/>
-      </classpath>
-      <formatter type="plain" usefile="true"/>
-
-      <test name="${testcase}" todir="${test.results}" if="testcase" haltonfailure="${test.haltonerror}"/>
-      <batchtest todir="${test.results}" haltonfailure="${test.haltonerror}" unless="testcase">
-        <fileset dir="${src.test}">
-          <include name="**/*Test.java"/>
-        </fileset>
-      </batchtest>
-    </junit>
-
-  </target>
-
-  <target name="jar" depends="compile" description="creates a Hadoop ready jar with all dependencies">
-
-    <!-- TODO Exclude hadoop jars here? -->
-    
-    <jar jarfile="${build.dir}/${ant.project.name}.jar">
-      <fileset dir="${build.classes}"/>
-      <fileset dir="${basedir}" includes="lib/"/>
-      <manifest>
-        <attribute name="Main-Class" value="bixo.${ant.project.name}/Main"/>
-      </manifest>
-    </jar>
-
-  </target>
-
-  <target name="dist" depends="clean" description="packages current project">
-
-    <mkdir dir="${dist}"/>
-
-    <copy todir="${dist}">
-
-      <fileset dir=".">
-        <include name="data/**"/>
-        <include name="src/**"/>
-        <include name="lib/**"/>
-        <include name="build.xml"/>
-        <include name="README.TXT"/>
-      </fileset>
-
-    </copy>
-
-  </target>
-
-  <target name="tar" depends="dist" description="creates an archive of current project">
-    <tar destfile="${ant.project.name}.tgz"
-         compression="gzip">
-      <tarfileset dir="dist/" prefix="${ant.project.name}">
-        <include name="**/**"/>
-      </tarfileset>
-    </tar>
-  </target>
+	<target name="test-all">
+		<iterate target="test" />
+	</target>
 
 </project>
