First real commit of fetcher infrastructure

--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -1,6 +1,9 @@
 # Define some default values that can be overridden by system properties
 bixo.root.logger=INFO,console
 log4j.logger.org.apache.hadoop=WARN
+log4j.logger.org.apache.http.wire=INFO
+log4j.logger.org.apache.http.headers=INFO
+log4j.logger.org.apache.http=INFO
 bixo.log.dir=./logs
 bixo.log.file=bixo.log
 
