--- a/ivy.xml
+++ b/ivy.xml
@@ -27,6 +27,9 @@
         <dependency org="org.mockito" name="mockito-core" rev="1.7" conf="test" />
         <dependency org="org.hamcrest" name="hamcrest-core" rev="1.1" conf="test" />
         <dependency org="org.objenesis" name="objenesis" rev="1.0" conf="test" />
+        
+        <dependency org="org.apache" name="commons-io" rev="1.3.2" conf="test" />
+        
 		<!-- coverage -->        
 		<dependency org="net.sourceforge.cobertura" name="cobertura" rev="1.9.1" conf="instrument" />
 		<dependency org="org.asm" name="asm" rev="3.0" conf="instrument" />
