--- a/ivy.xml
+++ b/ivy.xml
@@ -1,3 +1,24 @@
+<!--
+Copyright (c) 1997-2009 101tec Inc.
+
+Permission is hereby granted, free of charge, to any person obtaining a copy 
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights 
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell 
+copies of the Software, and to permit persons to whom the Software is 
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in 
+all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR 
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, 
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE 
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER 
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+-->
 <ivy-module version="2.0">
 	<info organisation="emi" module="event-processing/grid" />
 
@@ -9,6 +30,7 @@
 		<conf name="compile" description="source compile" />
 		<conf name="test" extends="compile" description="compile plus test jars" />
 		<conf name="instrument" description="code coverage" />
+		<conf name="checkstyle" description="code style checking" />
 		<conf name="job" description="jars that go into the hadoop job jar" />
 	</configurations>
 
@@ -36,6 +58,9 @@
 		<dependency org="org.asm" name="asm-tree" rev="3.0" conf="instrument" />
 		<dependency org="org.jakarta-oro" name="jakarta-oro" rev="2.0.8" conf="instrument" />
 		<!-- as well as log4j -->
+		
+		<!-- checkstyle -->
+		<dependency org="net.sf.checkstyle" name="checkstyle-all" rev="5.0-beta2" conf="checkstyle" />
 
         <dependency org="org.cascading" name="cascading-test" rev="1.0.6" conf="test" />
 
