--- a/ivy.xml
+++ b/ivy.xml
@@ -84,7 +84,15 @@ SOFTWARE.
 		<dependency org="httpComponents" name="httpcore" rev="4.0" conf="compile" />
 		<dependency org="apache-commons" name="commons-logging" rev="1.1.1" conf="compile" />
 		<dependency org="apache-commons" name="commons-codec" rev="1.3" conf="compile" />
-
+		
+		<!-- webgraph -->
+		
+		<dependency org="webgraph" name="webgraph" rev="2.4.2" conf="compile" />
+		<dependency org="colt" name="colt" rev="1.2.0" conf="compile" />
+		<dependency org="dsiutils" name="dsiutils" rev="1.0.7" conf="compile" />
+		<dependency org="fastutil5" name="fastutil5" rev="5.1.5" conf="compile" />
+		<dependency org="jsap" name="jsap" rev="2.0" conf="compile" />
+		<dependency org="sux4j" name="sux4j" rev="1.0.3" conf="compile" />
 		
 		<dependency org="org.apache" name="log4j" rev="1.2.13" conf="compile, instrument" />
 		
