--- a/ivy.xml
+++ b/ivy.xml
@@ -20,7 +20,7 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 -->
 <ivy-module version="2.0">
-	<info organisation="emi" module="event-processing/grid" />
+	<info organisation="101tec" module="bixo" />
 
 	<!-- project configuration
     -->
@@ -52,6 +52,8 @@ SOFTWARE.
 
         <dependency org="org.apache" name="commons-io" rev="1.3.2" conf="test" />
 
+        <dependency org="org.cascading" name="cascading-test" rev="1.0.8" conf="test" />
+
 		<!-- coverage -->
 		<dependency org="net.sourceforge.cobertura" name="cobertura" rev="1.9.1" conf="instrument" />
 		<dependency org="org.asm" name="asm" rev="3.0" conf="instrument" />
@@ -61,8 +63,6 @@ SOFTWARE.
 
 		<!-- checkstyle -->
 		<dependency org="net.sf.checkstyle" name="checkstyle-all" rev="5.0-beta2" conf="checkstyle" />
-
-        <dependency org="org.cascading" name="cascading-test" rev="1.0.8" conf="test" />
 
 		 <!-- Cascading -->
         <dependency org="org.cascading" name="cascading-core" rev="1.0.8" conf="compile,job" />
@@ -82,13 +82,12 @@ SOFTWARE.
 		<dependency org="jasper" name="jasper-runtime" rev="x" conf="compile" />
 
 		<!-- httpclient -->
-		<dependency org="httpComponents" name="httpclient" rev="4.0-beta2" conf="compile" />
-		<dependency org="httpComponents" name="httpcore" rev="4.0" conf="compile" />
-		<dependency org="apache-commons" name="commons-logging" rev="1.1.1" conf="compile" />
-		<dependency org="apache-commons" name="commons-codec" rev="1.3" conf="compile" />
+		<dependency org="httpComponents" name="httpclient" rev="4.0-beta2" conf="compile,job" />
+		<dependency org="httpComponents" name="httpcore" rev="4.0" conf="compile,job" />
+		<dependency org="apache-commons" name="commons-logging" rev="1.1.1" conf="compile,job" />
+		<dependency org="apache-commons" name="commons-codec" rev="1.3" conf="compile,job" />
 
 		<!-- webgraph -->
-
 		<dependency org="webgraph" name="webgraph" rev="2.4.2" conf="compile" />
 		<dependency org="colt" name="colt" rev="1.2.0" conf="compile" />
 		<dependency org="dsiutils" name="dsiutils" rev="1.0.7" conf="compile" />
@@ -96,6 +95,7 @@ SOFTWARE.
 		<dependency org="jsap" name="jsap" rev="2.0" conf="compile" />
 		<dependency org="sux4j" name="sux4j" rev="1.0.3" conf="compile" />
 
+		<!-- logging -->
 		<dependency org="org.apache" name="log4j" rev="1.2.13" conf="compile, instrument" />
 		<dependency org="org.slf4j" name="slf4j-api" rev="1.4.3" conf="compile, instrument" />
 		<dependency org="org.slf4j" name="slf4j-log4j12" rev="1.4.3" conf="instrument" />
