--- a/ivy.xml
+++ b/ivy.xml
@@ -53,6 +53,9 @@ SOFTWARE.
         <dependency org="org.apache" name="commons-io" rev="1.3.2" conf="test" />
 
         <dependency org="org.cascading" name="cascading-test" rev="1.0.8" conf="test" />
+        
+        <!-- test parsing -->
+        <dependency org="org.archive" name="heritrix" rev="1.14.3" conf="test" />
 
 		<!-- coverage -->
 		<dependency org="net.sourceforge.cobertura" name="cobertura" rev="1.9.1" conf="instrument" />
