--- a/ivy.xml
+++ b/ivy.xml
@@ -68,7 +68,7 @@
         <dependency org="net.sf.checkstyle" name="checkstyle-all" rev="5.0-beta2" conf="checkstyle" />
 
         <!-- Cascading -->
-        <dependency org="org.cascading" name="cascading-core" rev="1.0.8" conf="compile,job" />
+        <dependency org="org.cascading" name="cascading-core" rev="1.0.9-dev" conf="compile,job" />
         <dependency org="jgrapht" name="jgrapht" rev="jdk1.6" conf="compile,job" />
 
         <!-- Hadoop -->
