Moved around packages. Added slow fetch termination. Cleaned up broken tests. Added cover for Cascading process to handle local/remote reporting.

--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -1,11 +1,13 @@
 # Define some default values that can be overridden by system properties
 bixo.root.logger=INFO,console
+bixo.console.pattern=%d{yy/MM/dd HH:mm:ss} %p %c{2}:%L - %m%n
+bixo.log.dir=./logs
+bixo.log.file=bixo.log
+
 log4j.logger.org.apache.hadoop=WARN
 log4j.logger.org.apache.http.wire=INFO
 log4j.logger.org.apache.http.headers=INFO
 log4j.logger.org.apache.http=INFO
-bixo.log.dir=./logs
-bixo.log.file=bixo.log
 
 
 # Define the root logger to the system property "bixo.root.logger".
@@ -36,12 +38,12 @@ log4j.appender.DRFA.layout.ConversionPattern=%d{ISO8601} %p %c:%L - %m%n
 
 #
 # console
-# Add "console" to rootlogger above if you want to use this 
+# Add "console" to bixo.root.logger above if you want to use this 
 #
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.target=System.out
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %p %c{2}:%L - %m%n
+log4j.appender.console.layout.ConversionPattern=${bixo.console.pattern}
 
 # Custom Logging levels
 
