--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,6 +1,7 @@
 # Define some default values that can be overridden by system properties
 bixo.root.logger=INFO,console
 bixo.console.pattern=%d{yy/MM/dd HH:mm:ss} %p %c{2}:%L - %m%n
+bixo.http.level=INFO
 bixo.log.dir=./logs
 bixo.log.file=bixo.log
 
@@ -43,9 +44,10 @@ log4j.appender.console.layout.ConversionPattern=${bixo.console.pattern}
 # Custom Logging levels
 
 log4j.logger.org.apache.hadoop=WARN
-log4j.logger.org.apache.http.wire=INFO
-log4j.logger.org.apache.http.headers=INFO
-log4j.logger.org.apache.http=INFO
+
+log4j.logger.org.apache.http.wire=${bixo.http.level}
+log4j.logger.org.apache.http.headers=${bixo.http.level}
+log4j.logger.org.apache.http=${bixo.http.level}
 
 
 #log4j.logger.org.apache.hadoop.fs.FSNamesystem=DEBUG
