--- a/ivy.xml
+++ b/ivy.xml
@@ -83,8 +83,8 @@
         <dependency org="jasper" name="jasper-runtime" rev="x" conf="compile" />
 
         <!-- httpclient -->
-        <dependency org="httpComponents" name="httpclient" rev="4.0-beta2" conf="compile,job" />
-        <dependency org="httpComponents" name="httpcore" rev="4.0" conf="compile,job" />
+        <dependency org="httpComponents" name="httpclient" rev="4.0-rc1" conf="compile,job" />
+        <dependency org="httpComponents" name="httpcore" rev="4.0.1" conf="compile,job" />
         <dependency org="apache-commons" name="commons-logging" rev="1.1.1" conf="compile,job" />
         <dependency org="apache-commons" name="commons-codec" rev="1.3" conf="compile,job" />
 
