--- a/ivy.xml
+++ b/ivy.xml
@@ -52,7 +52,7 @@
 
         <dependency org="org.apache" name="commons-io" rev="1.3.2" conf="test" />
 
-        <dependency org="org.cascading" name="cascading-test" rev="1.0.8" conf="test" />
+        <dependency org="org.cascading" name="cascading-test" rev="1.0.13" conf="test" />
         
         <!-- test parsing -->
         <dependency org="org.archive" name="heritrix" rev="1.14.3" conf="test" />
@@ -68,7 +68,7 @@
         <dependency org="net.sf.checkstyle" name="checkstyle-all" rev="5.0-beta2" conf="checkstyle" />
 
         <!-- Cascading -->
-        <dependency org="org.cascading" name="cascading-core" rev="1.0.9-dev" conf="compile,job" />
+        <dependency org="org.cascading" name="cascading-core" rev="1.0.13" conf="compile,job" />
         <dependency org="jgrapht" name="jgrapht" rev="jdk1.6" conf="compile,job" />
 
         <!-- Hadoop -->
