Set logging level to debug during tests.
Disable a bunch of 3rd party logging that should be only output at TRACE level.

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Define some default values that can be overridden by system properties
-bixo.root.logger=INFO,console
+bixo.root.logger=DEBUG,console
 bixo.console.pattern=%d{yy/MM/dd HH:mm:ss} %p %c{2}:%L - %m%n
 bixo.http.level=INFO
 bixo.log.dir=./logs
@@ -49,5 +49,13 @@ log4j.logger.org.apache.http.wire=${bixo.http.level}
 log4j.logger.org.apache.http.headers=${bixo.http.level}
 log4j.logger.org.apache.http=${bixo.http.level}
 
+# Hide a bunch of useless output that we get at the DEBUG level. These should
+# probably all be using trace(), not debug() to log their output.
+log4j.logger.cascading.flow.stack.FlowMapperStack=INFO
+log4j.logger.cascading.pipe.Each=INFO
+log4j.logger.cascading.pipe.Group=INFO
+log4j.logger.org.apache.hadoop.conf.Configuration=INFO
+log4j.logger.org.apache.http.impl.conn.tsccm.RefQueueWorker=INFO
+log4j.logger.org.mortbay.util.ThreadedServer=INFO
 
 #log4j.logger.org.apache.hadoop.fs.FSNamesystem=DEBUG
