--- a/ivy.xml
+++ b/ivy.xml
@@ -50,8 +50,6 @@
         <dependency org="org.hamcrest" name="hamcrest-core" rev="1.1" conf="test" />
         <dependency org="org.objenesis" name="objenesis" rev="1.0" conf="test" />
 
-        <dependency org="org.apache" name="commons-io" rev="1.3.2" conf="test" />
-
         <dependency org="org.cascading" name="cascading-test" rev="1.0.13" conf="test" />
         
         <!-- test parsing -->
@@ -112,6 +110,7 @@
         
         <!--  miscellaneous  -->
         <dependency org="org.kohsuke" name="args4j" rev="2.0.10" conf="compile,job" />
+        <dependency org="org.apache" name="commons-io" rev="1.3.2" conf="compile, test" />
     </dependencies>
 
 </ivy-module>
