--- a/ivy.xml
+++ b/ivy.xml
@@ -111,6 +111,7 @@
         <!--  miscellaneous  -->
         <dependency org="org.kohsuke" name="args4j" rev="2.0.10" conf="compile,job" />
         <dependency org="org.apache" name="commons-io" rev="1.3.2" conf="compile, test" />
+        <dependency org="commons-lang" name="commons-lang" rev="2.4" conf="compile,job" />
     </dependencies>
 
 </ivy-module>
