Fixed problem w/"fresh" builds:
.gitingore ignores "build", but the build properties are
in src/build/ant/build.properties, so this file wasn't
getting committed when I modified it.

--- a/build.xml
+++ b/build.xml
@@ -22,7 +22,7 @@ SOFTWARE.
 <project name="bixo-core" default="test">
 
 	<property name="root.dir" value="${basedir}" />
-	<property file="${root.dir}/src/build/build.properties" />
+	<property file="${root.dir}/src/build/ant/build.properties" />
 
 
 	<!-- ================================================================== -->
