make sure all tests get run before we deploy.

--- a/build.xml
+++ b/build.xml
@@ -318,7 +318,7 @@ SOFTWARE.
 	<!-- ================================================================== -->
 
 	<target name="deploy"
-			depends="jar, mvn-deploy"
+			depends="test-all, mvn-deploy"
 			description="--> deploy SNAPSHOT jar to 101tec Nexus repository">
 	</target>
 	
