--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 	</scm>
 	<packaging>jar</packaging>
 	<!-- Must be kept in sync with "version" value in build.properties -->
-	<version>0.4.1-SNAPSHOT</version>
+	<version>0.4.2</version>
 	
 	<repositories>
 		<repository>
