--- a/pom.xml
+++ b/pom.xml
@@ -92,13 +92,6 @@
         </dependency>
         
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
-			<scope>provided</scope>
-		</dependency>
-        
-		<dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.14</version>
@@ -205,6 +198,15 @@
             <scope>test</scope>
         </dependency>
 
+		<!-- Provided dependencies -->
+	
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<scope>provided</scope>
+		</dependency>
+        
 		<!-- Eclipse project generation dependencies -->
 	
 		<dependency>
