--- a/pom.xml
+++ b/pom.xml
@@ -74,15 +74,15 @@
         </dependency>
         
 		<dependency>
-            <groupId>org.apache.tika</groupId>
+            <groupId>bixo</groupId>
             <artifactId>tika-core</artifactId>
-            <version>0.4</version>
+            <version>0.5-dev-2</version>
         </dependency>
         
 		<dependency>
-            <groupId>org.apache.tika</groupId>
+            <groupId>bixo</groupId>
             <artifactId>tika-parsers</artifactId>
-            <version>0.4</version>
+            <version>0.5-dev-2</version>
         </dependency>
         
 		<dependency>
