--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -45,9 +45,13 @@ log4j.appender.console.layout.ConversionPattern=${bixo.console.pattern}
 
 log4j.logger.org.apache.hadoop=WARN
 
+# Allow hiding of wire output even when running at TRACE levels
 log4j.logger.org.apache.http.wire=${bixo.http.level}
 log4j.logger.org.apache.http.headers=${bixo.http.level}
 log4j.logger.org.apache.http=${bixo.http.level}
+
+# Hide HttpClient 3.1 output (from Heritrix archive reader code)
+log4j.logger.httpclient.wire.header=${bixo.http.level}
 
 # Hide a bunch of useless output that we get at the DEBUG level. These should
 # probably all be using trace(), not debug() to log their output.
