--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,7 +1,9 @@
 # Define some default values that can be overridden by system properties
-bixo.root.logger=DEBUG,console
-bixo.console.pattern=%d{yy/MM/dd HH:mm:ss} %p %c{2}:%L - %m%n
+bixo.root.level=DEBUG
 bixo.http.level=INFO
+
+bixo.root.logger=${bixo.root.level},console
+bixo.console.pattern=%d{yy/MM/dd HH:mm:ss} %p %c{2}:%L - %m%n
 bixo.log.dir=./logs
 bixo.log.file=bixo.log
 
