--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Define some default values that can be overridden by system properties
-bixo.root.logger=DEBUG,console
+bixo.root.logger=TRACE,console
 bixo.console.pattern=%d{yy/MM/dd HH:mm:ss} %p %c{2}:%L - %m%n
 bixo.http.level=INFO
 bixo.log.dir=./logs
