Try to mask a bogus Hadoop map-reduce warning.

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -60,7 +60,10 @@ log4j.logger.httpclient.wire.header=${bixo.http.level}
 log4j.logger.cascading.flow.stack.FlowMapperStack=INFO
 log4j.logger.cascading.pipe.Each=INFO
 log4j.logger.cascading.pipe.Group=INFO
+
 log4j.logger.org.apache.hadoop.conf.Configuration=INFO
+log4j.logger.org.apache.hadoop.mapred.JobClient=ERROR
+
 log4j.logger.org.apache.http.impl.conn.tsccm.RefQueueWorker=INFO
 log4j.logger.org.mortbay.util.ThreadedServer=INFO
 
